# teng

./: .clang-tidy  .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  bootstrap.sh  configure.ac  configure.in  fuzzer-coverage.sh  fuzzer-dict.txt  generate.py  libteng.pc.in  meson.build  meson.options  meson_options.txt  setup.py  teng.texi  tengmodule.cc  test-coverage.sh  test.py
debian/: changelog  control  libteng-dev.control  libteng-dev.install  libteng.control  libteng.install  libteng.postinst  libteng.shlibs  libteng2.install  libteng4.install  make.sh  python-teng.control  rules
doc/: Makefile.am  manual.texi  template.texi
doc/examples/en/: template.texi
doc/manual/: Makefile.am
doc/manual/en/: Makefile.am  api_c.texi  api_php.texi  api_python.texi  install_c.texi  install_php.texi  install_python.texi  manual.texi  template.texi  teng1.fig
gdb-pretty-printers/: printers.py
include/: Makefile.am  tengconfig.h.in  tengfragment.h  tengfragmentvalue.h  tenginvoke.h  tengstringify.h  tengstructs.h  tengudf.h  tengvalue.h  tengwriter.h
include/teng/: Makefile.am  config.h.in  counted_ptr.h  error.h  filesystem.h  fragment.h  fragmentlist.h  fragmentvalue.h  invoke.h  meson.build  stringify.h  stringview.h  structs.h  teng.h  types.h  udf.h  value.h  writer.h
jenkins/hooks/rebuild/: A10settimezone.sh
python/: ChangeLog  generate.py  setup.py  teng.cc  tengmodule.cc
python/debian/: changelog  control  make.sh  python-teng.control  rules
src/: Makefile.am  aux.cc  cache.cc  cache.h  configuration.cc  configuration.h  contenttype.cc  contenttype.h  debug.h  dictionary.cc  dictionary.h  error.cc  filestream.h  filesystem.cc  flexhelpers.h  formatter.cc  formatter.h  fp.h  fragment.cc  fragmentlist.cc  fragmentvalue.cc  function.cc  function.h  functiondate.h  functionescaping.h  functionnumber.h  functionother.h  functionstring.h  functionutil.h  hex.cc  hex.h  identifier.h  instruction.cc  instruction.h  instructionpointer.h  jsonutils.h  lex1.cc  lex1.h  lex2.cc  lex2.h  (+176 more)
src/bison/: lalr1.cc
src/example/: cache.cc  example.cc
src/tests/: base-nested-define.html  base.html  builtin-vars.cc  catch.hpp  cond.cc  ctype.cc  debug.cc  dict.cc  dict.cs.txt  dict.en.txt  dict.txt  expr-case.cc  expr-int.cc  expr-other.cc  expr-real.cc  expr-regex.cc  expr-string.cc  expr-tern.cc  format.cc  frag.cc  fun-date.cc  fun-escaping.cc  fun-number.cc  fun-other.cc  fun-replace.cc  fun-string.cc  fun-urlencoding.cc  fuzz.cc  incl.cc  inheritance.cc  main.cc  old.cc  queries.cc  rtvars.cc  simple.cc  teng.conf  teng.debug.conf  teng.no-print-escape.conf  utils.h  vars.cc
src/win32/: ReadMe.txt  stdafx.cpp  stdafx.h  teng.sln  teng.vcproj  time.cpp
src/win32/Include/: unistd.h
src/win32/Include/sys/: time.h
subprojects/: catch2-with-main.wrap
tests/: .compare.cc.swp  .example.cc.swp  Makefile.am  a.out  compare.cc  cond.cc  debug.cc  dict.en.txt  example.cc  expr-int.cc  expr-tern.cc  fun-date.cc  fun-other.cc  incl.error.txt  old.cc  override-define.html  override-empty.html  override-one.html  override-super.html  override-two.html  teng.conf  test_base.cc  test_filesystem.cc  test_utils.h  text.txt  utils.h  vars.cc
tests/subdir/: head.html  include_test_fail.html  include_test_success.html
tests/templates/: common-head.html  page.html
tests/templates/subdir/: paragraph.html
