#
# Teng -- a general purpose templating engine.
# Copyright (C) 2004  Seznam.cz, a.s.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
# Seznam.cz, a.s.
# Naskove 1, Praha 5, 15000, Czech Republic
# http://www.seznam.cz, mailto:teng@firma.seznam.cz
#
#
# $Id: configure.in,v 1.23 2008-11-20 23:56:31 burlog Exp $
#
# DESCRIPTION
# configure template for Teng.
#
# AUTHORS
# Vaclav Blazek <blazek@firma.seznam.cz>
#
# HISTORY
# 2003-09-17  (vasek)
#             Created.
#


# initialize autoconf
AC_INIT(teng, 2.1.0, teng@firma.seznam.cz)
# initialize automake(use AC_INIT's arguments)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_PREREQ(2.50)

# tell autoconf where to find sources
AC_CONFIG_SRCDIR([src/teng.cc])

# check for C++ compiler
AC_PROG_CXX

# check for std C headers
AC_HEADER_STDC

# check for libtool
AC_PROG_LIBTOOL

# This version number needs to be changed in several different ways for each
# release. Please read the libtool documentation (info libtool 'Updating
# version info') before touching this. (this is *.so version number).
TENG_MAJOR=3
TENG_MINOR=0
VERSION_INFO="-version-info $TENG_MAJOR:$TENG_MINOR:1"
AC_SUBST(TENG_MAJOR)
AC_SUBST(TENG_MINOR)
AC_SUBST(VERSION_INFO)

# check for flex and bison
AM_PROG_LEX
AC_PROG_YACC

# check for special header files
AC_CHECK_HEADERS(fenv.h)

# check for functions that may miss on some platforms
AC_CHECK_LIB(m, floor)
AC_REPLACE_FUNCS([trunc round])

# generate Makefile
AC_OUTPUT(version Makefile src/Makefile src/tengconfig.h)
#          doc/Makefile doc/manual/Makefile doc/manual/en/Makefile)
